# deferred-printf

./: .gitignore  CMakeLists.txt  README.md
include/: deferred_printf.h
src/: deferred_printf.cpp
tests/: test_deferred_printf.cpp
